[package]
name = "logsumexp"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Radcliffe <andrewjradcliffe@gmail.com>"]
description = "Numerically stable computation of log-sum-exp using a 1-pass (online) algorithm"
repository = "https://github.com/andrewjradcliffe/logsumexp/"
license = "MIT OR Apache-2.0"
keywords = ["math", "numerics", "logsumexp"]
categories = ["mathematics", "algorithms"]

[dependencies]
lnexp = "0.2.0"
